          removed after a lengthy deprecation cycle
    * Fixes
        - When performing resultset update/delete only strip condition
          qualifiers - leave the source name alone (RT#80015, RT#78844)
        - Fix incorrect behavior on resultset update/delete invoked on
          composite resultsets (e.g. as_subselect_rs)
        - More robust behavior under heavily threaded environments - make
          sure we do not have refaddr reuse in the global storage registry
        - Fix failing test on 5.8 under Win32 (RT#81114)
        - Fix hash-randomization test issues (RT#81638)
        - Disallow erroneous calling of connect_info on a replicated storage
          (RT#78436)
    * Misc
        - Improve the populate docs in ::Schema and ::ResultSet
        - ::Storage::DBI::source_bind_attributes() removed as announced
          on Jan 2011 in 0e773352a

0.08204 2012-11-08
    * New Features / Changes
        - SQLMaker now accepts \'literal' with the 'for' rs attribute as an
          override to the builtin FOR options
    * Fixes
        - Fix unique constraint violations in Ordered.pm blanket movement
          (RT#79773, rolls back short-sighted 5e6fde33e)
        - Fix API mismatch between new_result() and new_related() (originally
          broken by fea3d045)
        - Fix test failure on perl 5.8
    * Misc
        - Much more extensive diagnostics when a new RDBMS/DSN combination is
          encountered (RT#80431)

0.08203 2012-10-18
    * Fixes
        - Really fix inadequate $dbh->ping SQLite implementation (what shipped
          in 0.08201 tickled other deficiencies in DBD::SQLite itself)

0.08202 2012-10-06
    * Fixes
        - Replace inadequate $dbh->ping SQLite implementation with our own,
          fixes RT#78420

0.08200 2012-08-24 (UTC)
    * Fixes
        - Change one of the new tests for the previous release to not require
          SQL::Translator

0.08199 2012-08-22 (UTC)
    * Fixes